--- a/www/style.css
+++ b/www/style.css
@@ -2,7 +2,7 @@
 body { 
 	margin: 0;
 	padding: 0;
-	background: #FFFFFF url(images/img02.gif) repeat-x left top;
+	background: #FFFFFF url(images/menu.gif) repeat-x left top;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	color: #515151;
@@ -66,7 +66,7 @@ hr { display: none; }
 
 #logo {
 	width: 940px;
-	height: 111px;
+	height: 71px;
 	margin: 0 auto;
 	padding-left:5px;
 	margin-top:4px;
@@ -100,7 +100,9 @@ hr { display: none; }
 	text-decoration: none;
 	color: #A8A8A8;
 }
-
+#logo img {
+	margin-top:20px;
+}
 #logo h1 a {
 	text-decoration: none;
 	color: #485459;
@@ -208,7 +210,7 @@ hr { display: none; }
 
 #footer {
 	width: 100%;
-	height: 122px;
+	height: 102px;
 	margin: 0 auto;
 	background: #E1E1E1;
 	border-top: 5px solid #656565;
@@ -219,7 +221,7 @@ hr { display: none; }
 
 #footer p {
 	margin: 0;
-	padding: 30px 0px 0px 0px;
+	padding: 20px 0px 0px 0px;
 	text-align: center;
 	line-height: normal;
 	font-size: 10px;
@@ -234,4 +236,24 @@ hr { display: none; }
 	padding-left:8px;
 	padding-top:6px;
 	padding-bottom:10px;
+}
+
+div.error
+{
+	padding:20px;
+	border:1px solid #FF2A2A;
+	background-color:#FFD4FF;
+	font-size:1.2em;
+	margin-bottom:10px;
+}
+
+#statusbar
+{
+	float:right;
+	padding-right:10px;
+}
+
+#statusbar a {
+	text-decoration: none;
+	color: #515151;
 }
