--- a/www/style.css
+++ b/www/style.css
@@ -14,6 +14,9 @@ h1, h2, h3 {
 	color: #485459;
 }
 
+textarea { font-family: Arial, Helvetica, sans-serif; height:100px; width:300px;}
+
+
 h1 { font-size: 44px; padding-bottom:10px;}
 
 h2 { padding-bottom:5px; font-size: 18px; }
@@ -286,4 +289,10 @@ table.data th
 		padding:3px;
 		font-style:bolder;
 		text-transform:capitalize;
+}
+
+
+div.comments
+{
+		padding-top:20px;
 }
