edit users, edit releases, browse releases, browse profile, tweaks to style, html escaping of data
git-svn-id: svn://svn.newznab.com/nn/trunk@46 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/admin/style.css
+++ b/www/admin/style.css
@@ -27,7 +27,9 @@ table.input td
 
 #adpanel { display:none; }
 
-#content { 	width: 720px; }
+#content { width: 720px; }
+
+#sidebar { width: 200px; }
 
 #logo {
 	width: 0;
