show similar nzbs in view page.
git-svn-id: svn://svn.newznab.com/nn/trunk@57 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/style.css
+++ b/www/style.css
@@ -290,6 +290,7 @@ table.data td.less
 table.data th
 {
 	text-align:left;
+	vertical-align:top;
 	background-color:#DDD;
 	border-color: #AAA;
 	border-width: 1px 1px 0 0;
