support for determining tvrage ids, series and episode info. more work on api to get data by rage ids, add tv info to rss feeds, add/edit/list rage interface in admin pages
git-svn-id: svn://svn.newznab.com/nn/trunk@58 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/style.css
+++ b/www/style.css
@@ -305,3 +305,15 @@ div.comments
 {
 	padding-top:20px;
 }
+
+div.resextra
+{
+	color: #888;
+	font-size: 0.8em;
+}
+
+div.resextra a
+{
+	color: #888;
+	text-decoration:none;
+}
