put js var in every page for server root, fix header menu to perform search
git-svn-id: svn://svn.newznab.com/nn/trunk@93 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/style.css
+++ b/www/style.css
@@ -372,12 +372,12 @@ div.resextra a
 {
 	padding-top:3px;
 	float:right;
-	xbackground-color:#e5e5e5;
 }
 
-#menusearchlink input
+#menusearchlink input, select
 {
 	font-size: 0.9em;
+	color:#555;
 }
 
 #menucontainer
