html bug and css fix for tables in IE
git-svn-id: svn://svn.newznab.com/nn/trunk@111 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/style.css
+++ b/www/style.css
@@ -265,7 +265,8 @@ div.error
 
 table.data
 {
-	border-spacing:0px;
+		border-collapse:collapse;
+		border-spacing:0px;
     border-color: #AAA;
     border-width: 0 0 1px 1px;
     border-style: solid;		
