english language mistakes in installation pages, and few bugs on installation checks
git-svn-id: svn://svn.newznab.com/nn/trunk@143 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/install/install.css
+++ b/www/install/install.css
@@ -17,6 +17,10 @@ h1, h2, h3 {
 	color: #485459;
 }
 
+li {
+	padding-top:10px;
+}
+
 textarea { font-family: Arial, Helvetica, sans-serif; height:100px; width:300px;}
 
 h1 { 
