--- a/www/style.css
+++ b/www/style.css
@@ -18,13 +18,13 @@ img.left { float: left; margin: 7px 30px 0 0; }
 img.right { float: right; margin: 7px 0 0 30px; }
 hr { display: none; }
 
-
 /*
 page structure
 */
 #header { width: 940px; 	margin: 0 auto; }
 
 #menu { height:30px; float: left; width: 100%; background-color:#e5e5e5; }
+.menupic {padding-left:15px;}
 
 #menulink { 	float: left; }
 #menulink ul { list-style-type: none; padding: 0; margin: 0; }
@@ -82,6 +82,11 @@ table.data td { vertical-align:top; padding:5px; border-color: #AAA; border-widt
 table.data td.less { color: #888; font-size: 0.8em; }
 table.data th { text-align:left; vertical-align:top; background-color:#DDD; border-color: #AAA; border-width: 1px 1px 0 0; border-style: solid; padding:3px; font-style:bolder; text-transform:capitalize;}
 table.highlight tr:hover td { background-color: #E1F0D9; }
+table.data em {font-weight:bolder; color:red;}
+table.data div.hint, div.hint a {font-size:0.9em; font-style:italic; color:#999;}
+input.long {width:400px; }
+input.short { width:40px; }
+
 
 div.resextra { color: #888; font-size: 0.8em; }
 div.resextra a { color: #888; text-decoration:none; }
