--- a/www/style.css
+++ b/www/style.css
@@ -83,7 +83,7 @@ table.data td.less { color: #888; font-size: 0.8em; }
 table.data th { text-align:left; vertical-align:top; background-color:#DDD; border-color: #AAA; border-width: 1px 1px 0 0; border-style: solid; padding:3px; font-style:bolder; text-transform:capitalize;}
 table.highlight tr:hover td { background-color: #E1F0D9; }
 table.data em {font-weight:bolder; color:red;}
-table.data div.hint, div.hint a {font-size:0.9em; font-style:italic; color:#999;}
+div.hint, div.hint a {font-size:0.9em; font-style:italic; color:#999;}
 input.long {width:400px; }
 input.short { width:40px; }
 
