--- a/www/admin/style.css
+++ b/www/admin/style.css
@@ -1,42 +1,11 @@
-body 
-{ 
-	background: #FFFFFF ;
-}
-
-
-textarea
-{
-	height:100px; width:400px;
-}
-
-
-table.input td
-{
-		vertical-align:top;
-}
+body  { background: #FFFFFF ; }
+textarea { height:100px; width:400px; }
 
 #adpanel { display:none; }
-
 #content { width: 720px; }
-
 #sidebar { width: 200px; }
+#logo { width: 0; height: 0; margin: 0 auto; padding-left:0; margin-top:0; }
+.footer { width: 100%; height: 100px; margin: 0 auto; background: #FFF; border-top: 0; }
+#menu { height:0px; }
 
-#logo {
-	width: 0;
-	height: 0;
-	margin: 0 auto;
-	padding-left:0;
-	margin-top:0;
-}
-
-#footer {
-	width: 100%;
-	height: 100px;
-	margin: 0 auto;
-	background: #FFF;
-	border-top: 0;
-}
-
-#menu {
-	height:0px;
-}
+table.input td { vertical-align:top;}
