--- a/www/style.css
+++ b/www/style.css
@@ -70,9 +70,9 @@ page structure
 #sidebar p { line-height: 200%;}
 #sidebar a { text-align: left; text-decoration: none; font-weight: bold;}
 
-#footer { width: 100%; height: 102px; margin: 0 auto; background: #E1E1E1; border-top: 5px solid #656565;}
-#footer p { margin: 0; padding: 20px 0px 0px 0px; text-align: center; line-height: normal; font-size: 10px; }
-#footer a {}
+.footer { width: 100%; height: 102px; margin: 0 auto; background: #E1E1E1; border-top: 5px solid #656565;}
+.footer p { margin: 0; padding: 20px 0px 0px 0px; text-align: center; line-height: normal; font-size: 10px; }
+.footer a {}
 
 /*
 misc site style such as data tables, 
