--- a/www/style.css
+++ b/www/style.css
@@ -99,10 +99,11 @@ div.comments { padding-top:20px; }
 /* icons */
 div.icon { float:left; width:16px; height:16px; background-repeat:no-repeat; cursor:pointer; }
 div.resextra div.icon { margin:2px 2px -2px 2px; }
-div.icon_tvrage			{ background-image:url('images/icons/tvrage.png'); }
 div.icon_cart			{ background-image:url('images/icons/cartup.png'); }
 div.icon_cart_clicked	{ background-image:url('images/icons/cartdown.png'); }
 div.icon_nzb			{ background-image:url('images/icons/nzbup.png'); }
 div.icon_nzb_clicked	{ background-image:url('images/icons/nzbdown.png'); }
-div.icon_sab			{ background-image:url('images/icons/sabup.png'); }
+div.icon_sab			{ background-image:url('images/icons/sabup.png'); display:none; }
 div.icon_sab_clicked	{ background-image:url('images/icons/sabdown.png'); }
+div.icon_tvrage			{ background-image:url('images/icons/tvrage.png'); }
+div.icon_check			{ background-image:url('images/icons/check.png'); }
