--- a/www/style.css
+++ b/www/style.css
@@ -89,7 +89,8 @@ input.long {width:400px; }
 input.short { width:40px; }
 
 
-div.resextra { color: #888; font-size: 0.8em; display:none; float:right; }
+div.reshover { display:none; float:right; }
+div.resextra { color: #888; font-size: 0.8em; }
 div.resextra a { color: #888; text-decoration:none; }
 
 div.error { padding:20px; border:1px solid #FF2A2A; background-color:#FFD4FF; font-size:1.2em; margin-bottom:10px;}
@@ -98,7 +99,7 @@ div.comments { padding-top:20px; }
 
 /* icons */
 div.icon { float:left; width:16px; height:16px; background-repeat:no-repeat; cursor:pointer; }
-div.resextra div.icon { margin:2px 2px -2px 2px; }
+div.reshover div.icon { margin:2px 2px -2px 2px; }
 div.icon_cart			{ background-image:url('images/icons/cartup.png'); }
 div.icon_cart_clicked	{ background-image:url('images/icons/cartdown.png'); }
 div.icon_nzb			{ background-image:url('images/icons/nzbup.png'); }
