allow admin to open/invite/close site registrations.
git-svn-id: svn://svn.newznab.com/nn/trunk@220 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/admin/style.css
+++ b/www/admin/style.css
@@ -1,5 +1,8 @@
 body  { background: #FFFFFF ; }
 textarea { height:100px; width:400px; }
+fieldset { margin-bottom:20px; border:1px solid #999;}
+legend { padding: 0.4em 0.6em; border:1px solid #999; font-weight:bold; text-align:right; }
+
 
 #adpanel { display:none; }
 #content { width: 720px; }
