--- a/www/style.css
+++ b/www/style.css
@@ -94,7 +94,7 @@ div.reshover { display:none; float:right; }
 div.resextra { color: #888; font-size: 0.8em; height:16px; }
 div.resextra a { color: #888; text-decoration:none; }
 
-div.error { padding:20px; border:1px solid #FF2A2A; background-color:#FFD4FF; font-size:1.2em; margin-bottom:10px;}
+div.error { padding:20px; padding-left:50px; border:1px solid #BBB; background: #FED0D0 url(images/icons/warning.png) no-repeat top; background-position: 5px 50%; font-size:1.2em; font-weight:bold; margin-bottom:10px;}
 
 div.comments { padding-top:20px; }
 
