--- a/www/style.css
+++ b/www/style.css
@@ -39,12 +39,21 @@ page structure
 
 #page { width: 940px; margin: 0 auto; padding: 50px 0px 0px 0px;}
 
-#logo { width: 940px; height: 71px; margin: 0 auto; padding-left:5px; margin-top:4px;}
+#logo { width: 940px;
+        height: 67px;
+        margin: 0 auto;
+        padding-left:5px;
+        margin-top:4px;
+        background:url("images/banner.jpg")
+        no-repeat bottom left;
+}
+
 #logo h1, #logo p { display:none; margin: 0px; line-height: normal; text-transform: lowercase; font-weight: normal; color: #485459;}
+
 #logo p { margin-top: 2px; text-transform: lowercase; font-size: 13px; color: #A8A8A8;}
 #logo h1 { padding-top: 10px; font-size: 48px;}
 #logo a { text-decoration: none; color: #A8A8A8; }
-#logo img { margin-top:25px; }
+#logo img { margin-top:15px; }
 #logo h1 a { text-decoration: none; color: #485459;}
 
 #banner { padding-bottom: 20px; }
