updated black modal css to only change the color
git-svn-id: svn://svn.newznab.com/nn/trunk@257 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/theme/black/style.css
+++ b/www/theme/black/style.css
@@ -33,4 +33,4 @@ select, textarea, input {background-color:#AAA; font-family:verdana;}
 
 pre#nfo { color: #fff; }
 
-#cboxLoadedContent{background:#333; margin-top:32px; padding:1px; }
+#cboxLoadedContent{ background:#333; }
