--- a/www/style.css
+++ b/www/style.css
@@ -90,6 +90,7 @@ table.data { border-collapse:collapse; }
 table.data th { text-align:left; vertical-align:top; background-color:#DDD; border-color: #AAA; border-width: 1px; border-style: solid; padding:3px; font-style:bolder; text-transform:capitalize;}
 table.data td { white-space:normal; vertical-align:top; padding:5px; border-color: #AAA; border-width: 1px; border-style: solid; }
 table.data td.less { color: #888; font-size: 0.8em; white-space:nowrap; }
+table.data td.icons { white-space:nowrap; padding-left:0px; padding-right:0px; }
 table.highlight tr:hover td { background-color: #E1F0D9; }
 table tr.alt { background-color: #EEE; }
 table.data em {font-weight:bolder; color:red;}
@@ -100,7 +101,6 @@ input.short { width:40px; }
 
 pre#nfo { font-family: "Courier New", "DejaVu Sans Mono", monospace; font-size: 12px; line-height: 13px; }
 
-div.reshover { display:none; float:right; }
 div.resextra { padding-top:2px; color: #888; font-size: 0.8em; height:16px; }
 div.resextra a { color: #888; text-decoration:none; }
 
@@ -108,9 +108,17 @@ div.error { padding:20px; padding-left:50px; border:1px solid #BBB; background: 
 
 div.comments { padding-top:20px; }
 
+input.nzb_check_all { margin-left:5px; }
+div.nzb_multi_operations { color:#888; display:inline; float:right; }
+div.nzb_multi_operations input { color:#888; background-color:#fff; border:1px solid #ddd; }
+div.nzb_multi_operations input:hover { color:#000; border:1px solid #000; cursor:pointer; }
+
+div.pager {display:inline;}
+
+
 /* icons */
-div.icon { float:left; width:16px; height:16px; background-repeat:no-repeat; cursor:pointer; }
-div.reshover div.icon { margin:2px 2px -2px 2px; }
+div.icon { width:16px; height:16px; background-repeat:no-repeat; cursor:pointer; position:relative; float:left; margin:2px; }
+table.data td.icons div.icon { opacity:.20; }
 div.icon_cart			{ background-image:url('images/icons/cartup.png'); }
 div.icon_cart_clicked	{ background-image:url('images/icons/cartdown.png'); }
 div.icon_nzb			{ background-image:url('images/icons/nzbup.png'); }
