issue #25 Activate/deactivate groups in /admin/group-list.php
git-svn-id: svn://svn.newznab.com/nn/trunk@281 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/admin/style.css
+++ b/www/admin/style.css
@@ -12,3 +12,31 @@ legend { padding: 0.4em 0.6em; border:1px solid #999; font-weight:bold; text-ali
 #menu { height:0px; }
 
 table.input td { vertical-align:top;}
+
+/* group editing */
+div#group_list {
+}
+
+    div#group_list div#message {
+        display: none;
+        margin: 0 0 10px 0;
+        color: #fff;
+        background: #008C00;
+        border: 1px solid #ddd;
+        padding: 5px;
+    }
+
+/* deactivate link */
+div#group_list a.group_active,
+div#group_list a.group_active:visited,
+div#group_list a.group_active:active {
+    color: #CC0000;
+}
+
+/* activate link */
+div#group_list a.group_deactive
+div#group_list a.group_deactive:visited,
+div#group_list a.group_deactive:active {
+    color: #008C00;
+}
+
