enable multi-add to cart+sab
git-svn-id: svn://svn.newznab.com/nn/trunk@307 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/style.css
+++ b/www/style.css
@@ -90,7 +90,7 @@ table.data { border-collapse:collapse; }
 table.data th { text-align:left; vertical-align:top; background-color:#DDD; border-color: #AAA; border-width: 1px; border-style: solid; padding:3px; font-style:bolder; text-transform:capitalize;}
 table.data td { white-space:normal; vertical-align:top; padding:5px; border-color: #AAA; border-width: 1px; border-style: solid; }
 table.data td.less { color: #888; font-size: 0.8em; white-space:nowrap; }
-table.data td.icons { white-space:nowrap; padding-left:0px; padding-right:0px; }
+table.data td.icons { white-space:nowrap; padding-left:0px; padding-right:0px; width:60px; }
 table.highlight tr:hover td { background-color: #E1F0D9; }
 table tr.alt { background-color: #EEE; }
 table.data em {font-weight:bolder; color:red;}
@@ -109,8 +109,9 @@ div.error { padding:20px; padding-left:50px; border:1px solid #BBB; background: 
 div.comments { padding-top:20px; }
 
 input.nzb_check_all { margin-left:5px; }
-div.nzb_multi_operations { color:#888; display:inline; float:right; width:330px; }
+div.nzb_multi_operations { color:#888; display:inline; float:right; }
 div.nzb_multi_operations input { color:#888; background-color:#fff; border:1px solid #ddd; }
+div.nzb_multi_operations input.nzb_multi_operations_sab { display:none; }
 div.nzb_multi_operations input:hover { color:#000; border:1px solid #000; cursor:pointer; }
 
 div.pager {display:inline;}
