export nzbs into a folder from admin page.
git-svn-id: svn://svn.newznab.com/nn/trunk@346 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/style.css
+++ b/www/style.css
@@ -34,7 +34,7 @@ page structure
 #menulink ul ul { visibility: hidden; position: absolute; width: 60px; height: 0; }
 #menulink ul li:hover ul, #menulink ul a:hover ul { visibility: visible; }
 #menusearchlink { padding-top:3px; float:right; }
-#menusearchlink input, select { font-size: 0.9em; color:#555; }
+#menusearchlink input, #menusearchlink select { font-size: 0.9em; color:#555; }
 #menucontainer { width:900px; height:10px; }
 
 #page { width: 940px; margin: 0 auto; padding: 50px 0px 0px 0px;}
@@ -98,6 +98,7 @@ div.hint, div.hint a {font-size:0.9em; font-style:italic; color:#999;}
 div.hint { margin-bottom:10px;}
 input.long {width:400px; }
 input.short { width:40px; }
+input.date { width:70px; }
 
 pre#nfo { font-family: "Courier New", "DejaVu Sans Mono", monospace; font-size: 12px; line-height: 13px; }
 
