--- a/www/theme/black/style.css
+++ b/www/theme/black/style.css
@@ -33,4 +33,11 @@ select, textarea, input {background-color:#AAA; font-family:verdana;}
 
 pre#nfo { color: #fff; }
 
+#movieinfo { background-position: center center; background-repeat: no-repeat; position: absolute; z-index: 2;}
+#movieinfo h1 { font-size: 32px; padding-left: 20px; }
+#movieinfo h2, #movieinfo h3 { padding-left: 10px; }
+#movieinfo .backdrop { color: #fff; text-shadow: 0px 0px 4px #000; }
+#backdrop { position: absolute; left: -11px; top: -12px; width: 773px; height: -11px; overflow: hidden;}
+#backdrop img { opacity:0.6; width: 100%;}
+
 #cboxLoadedContent{ background:#333; }
