--- a/www/style.css
+++ b/www/style.css
@@ -2,7 +2,7 @@
 /*
 site wide html styles
 */
-body { margin: 0; padding: 0; background: #FFFFFF url(images/menu.gif) repeat-x left top; font-family: Arial, Helvetica, sans-serif;	font-size: 12px; color: #515151; }
+body { margin: 0; padding: 0; background: #FFF url(images/menu.gif) repeat-x left top; font-family: Arial, Helvetica, sans-serif;	font-size: 12px; color: #515151; }
 h1, h2, h3 {	margin: 0;	font-weight: normal; color: #485459; }
 textarea { font-family: Arial, Helvetica, sans-serif; height:100px; width:300px;}
 h1 { font-size: 44px; padding-bottom:10px;}
