--- a/www/style.css
+++ b/www/style.css
@@ -132,6 +132,7 @@ div.icon_cart			{ background-image:url('images/icons/cartup.png'); }
 div.icon_cart_clicked	{ background-image:url('images/icons/cartdown.png'); }
 div.icon_nzb			{ background-image:url('images/icons/nzbup.png'); }
 div.icon_nzb_clicked	{ background-image:url('images/icons/nzbdown.png'); }
+div.icon_nzb a			{ text-decoration:none; padding-bottom:2px; padding-right:12px; }
 div.icon_sab			{ background-image:url('images/icons/sabup.png'); display:none; }
 div.icon_sab_clicked	{ background-image:url('images/icons/sabdown.png'); }
 div.icon_tvrage			{ background-image:url('images/icons/tvrage.png'); }
