fixed black theme issues with modal movie info
git-svn-id: svn://svn.newznab.com/nn/trunk@406 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/style.css
+++ b/www/style.css
@@ -218,7 +218,7 @@ div.icon_check			{ background-image:url('images/icons/check.png'); }
 	Use colorbox example 2 css for movieinfo popups
 */
 .cboxMovie{}
-    .cboxMovie #cboxContent{margin-top:32px;}
+    .cboxMovie #cboxContent{margin-top:32px; background: transparent;}
     .cboxMovie #cboxTopLeft{display:none;}
     .cboxMovie #cboxTopCenter{display:none;}
     .cboxMovie #cboxTopRight{display:none;}
