allow a category to be allocated to a regex, which is used instead of determineCategory() function. - DB PATCH -
alter table releaseregex add categoryID int null;
alter table binaries add categoryID int null;

git-svn-id: svn://svn.newznab.com/nn/trunk@510 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/admin/style.css
+++ b/www/admin/style.css
@@ -17,7 +17,7 @@ table.input td { vertical-align:top;}
 div#group_list {
 }
 
-    div#group_list div#message {
+div#message {
         display: none;
         margin: 0 0 10px 0;
         color: #fff;
