replace dots with spaces in browse and search results
git-svn-id: svn://svn.newznab.com/nn/trunk@581 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/style.css
+++ b/www/style.css
@@ -11,8 +11,8 @@ h3 { padding-top:10px;padding-bottom:5px;}
 p, ul, ol { margin-top: 0; line-height: 240%;	text-align: justify; }
 ul, ol { }
 blockquote { }
-a { color: #4D9408; }
-a:hover { text-decoration: none; }
+a { color: #4D9408; text-decoration: none;}
+a:hover { text-decoration: underline; }
 a img { border: none; }
 img.left { float: left; margin: 7px 30px 0 0; }
 img.right { float: right; margin: 7px 0 0 30px; }
