Implemented small and tiny in the CSS.
git-svn-id: svn://svn.newznab.com/nn/trunk@599 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/style.css
+++ b/www/style.css
@@ -17,7 +17,8 @@ a img { border: none; }
 img.left { float: left; margin: 7px 30px 0 0; }
 img.right { float: right; margin: 7px 0 0 30px; }
 hr { display: none; }
-
+.small { width: 50px; }
+.tiny { width: 25px; }
 /*
 page structure
 */
